<resources>
    <string name="app_name">PetCare</string>
    <string name="title">Pet Registration Form</string>

    <string name="text_microchip">Microchip ID</string>
    <string name="text_name">Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_email">Email Address</string>
    <string name="text_access">Access Code</string>
    <string name="text_confirm">Confirm Code</string>
    <string name="text_breed">Breed</string>
    <string name="text_neutered">Neutered</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="button_text_reset">RESET</string>
    <string name="button_text_submit">SUBMIT</string>

    <string name="default_microchip">ID</string>
    <string name="default_email">none@none.com</string>

    <string name="input_neutered">Is Neutered?</string>

    <string-array name="breed_array">
        <item>N/A</item>
        <item>Husky</item>
        <item>American Eskimo</item>
        <item>German Shepard</item>
    </string-array>


    <string name="error_microchip_duplicate">Microchip ID already in the database!</string>
    <string name="error_microchip_formatting">Microchip IDs may only have 5-15 capital letters or numbers!</string>
    <string name="error_name">First letter of each name should be capital!</string>
    <string name="error_email">Email format: "prefix@domain.[edu, co, com, gal]"</string>
    <string name="error_codes">Codes do not match!</string>
    <string name="error_empty_prompt">Please fill out all prompts.</string>

    <string name="test_goodchip">ELGA43</string>
    <string name="test_badchip">fuckin</string>
    <string name="test_goodname">Timmy Doo</string>
    <string name="test_badname">ness wilson</string>
    <string name="test_goodemail">example@example.com</string>
    <string name="test_bademail">name@placeorg</string>
    <string name="test_bademail2">nameplace.org</string>

    <string name="test_code">69420</string>

    <string name="success">Pet has been successfully submitted to database!</string>

    <string-array name="chips">
        <item>DA92384</item>
        <item>5213A4EGAL</item>
        <item>78EX8937</item>
        <item>AAMOCS3</item>
    </string-array>
</resources>