<?xml version="1.0" encoding="utf-8"?>
<!--Border-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/default_padding"
    tools:context="com.zybooks.petregistrationform.MainActivity">

    <!--Main window-->
    <LinearLayout style="@style/main_window">
        <!--App name-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <!--Title-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/header1" />
        </LinearLayout>

        <!--Prompts, Inputs, Buttons -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <!--Prompts-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/default_padding">
                <!--Microchip-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_microchip"
                    android:text="@string/text_microchip" />
                <!--Name-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_name"
                    android:text="@string/text_name" />
                <!--Gender-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_gender"
                    android:text="@string/text_gender" />
                <!--Email-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_email"
                    android:text="@string/text_email" />
                <!--Access-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_access"
                    android:text="@string/text_access" />
                <!--Confirm-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_confirm"
                    android:text="@string/text_confirm" />
                <!--Breed-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_breed"
                    android:text="@string/text_breed" />
                <!--Neutered-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_neutered"
                    android:text="@string/text_neutered" />
            </LinearLayout>
            <!--Inputs and Buttons-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >
                <!--Inputs-->
                <!--Microchip-->
                <EditText style="@style/input_short"
                    android:id="@+id/input_microchip"
                    android:hint="@string/default_microchip"
                    />
                <!--Name-->
                <EditText style="@style/input_short"
                    android:id="@+id/input_name"
                    />
                <!--Gender-->
                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/button_male"
                        android:text="@string/gender_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/default_margin" />
                    <RadioButton
                        android:id="@+id/button_female"
                        android:text="@string/gender_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true" />
                </RadioGroup>
                <!--Email-->
                <EditText style="@style/input_long"

                    android:id="@+id/input_email"
                    android:inputType="textEmailAddress"
                    android:text="@string/test_bademail"/>
                <!--Access-->
                <EditText style="@style/input_long"
                    android:id="@+id/input_access"
                    android:inputType="numberPassword"
                     />
                <!--Confirm-->
                <EditText style="@style/input_long"
                    android:id="@+id/input_confirm"
                    android:inputType="numberPassword"
                    />
                <!--Breed-->
                <Spinner style="@style/input_long"
                    android:id="@+id/input_breed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
                <!--Neutered-->
                <CheckBox
                    android:id="@+id/input_neutered"
                    android:text="@string/input_neutered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
                <!--Buttons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_margin">
                        <Button style="@style/textButton"
                            android:text="@string/button_text_reset"
                            android:layout_marginEnd="20dp"
                            android:onClick="clickReset"/>
                        <Button style="@style/textButton"
                            android:text="@string/button_text_submit"
                            android:onClick="clickSubmit"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>