<?xml version="1.0" encoding="utf-8"?>
<!--Border-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/default_padding"

    tools:context="com.zybooks.petregistrationform.MainActivity">

    <!--Main window-->
    <LinearLayout style="@style/main_window">
        <!--App name-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/default_textsize" />
        </LinearLayout>

        <!--Title-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/header1" />
        </LinearLayout>

        <!--Prompts and Input Widget -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <!--Prompts-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/default_padding">
                <!--Microchip-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_microchip"
                    android:text="@string/text_microchip" />
                <!--Name-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_name"
                    android:text="@string/text_name" />
                <!--Gender-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_gender"
                    android:text="@string/text_gender" />
                <!--Email-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_email"
                    android:text="@string/text_email" />
                <!--Access-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_access"
                    android:text="@string/text_access" />
                <!--Confirm-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_confirm"
                    android:text="@string/text_confirm" />
                <!--Breed-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_breed"
                    android:text="@string/text_breed" />
                <!--Neutered-->
                <TextView style="@style/prompt"
                    android:id="@+id/prompt_neutered"
                    android:text="@string/text_neutered" />
            </LinearLayout>
            <!--Inputs and Buttons-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >
                <!--Inputs-->
                <EditText style="@style/input_short"
                    android:id="@+id/input_microchip" />
                <EditText style="@style/input_short"
                    android:id="@+id/input_name" />
                <EditText style="@style/input_short"
                    android:id="@+id/input_gender" />
                <EditText style="@style/input_long"
                    android:id="@+id/input_email"
                    android:inputType="textEmailAddress" />
                <EditText style="@style/input_long"
                    android:id="@+id/input_access" />
                <EditText style="@style/input_long"
                    android:id="@+id/input_confirm" />
                <EditText style="@style/input_long"
                    android:id="@+id/input_breed" />
                <EditText style="@style/input_long"
                    android:id="@+id/input_neutered" />
                <!--Buttons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/default_margin">
                        <Button style="@style/textButton"
                            android:text="@string/reset_button_text"
                            android:layout_marginEnd="20dp"/>
                        <Button style="@style/textButton"
                            android:text="@string/submit_button_text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>